--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -123,15 +123,12 @@ http://www.tooplate.com/view/2082-pure-mix
             
                <!-- iso section -->
                <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
-
-                <h2>jurgnhiujrdehngjuirdghnjruydfi</h2>
                     <ul class="filter-wrapper clearfix">
-                        <h2 class="opc-main-bg">jurgnhiujrdehngjuirdghnjruydfeeeeeeeeeeeeeeeee</h2>
-                        <!-- <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
+                        <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".template">Web template</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
-                        <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li> -->
+                        <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li>
                     </ul>
 
                </div>
