--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -116,13 +116,14 @@ http://www.tooplate.com/view/2082-pure-mix
 <!-- Portfolio section
 ================================================== -->
 <section id="portfolio">
+    <h1>test</h1>
    <div class="container">
       <div class="row">
 
          <div class="col-md-12 col-sm-12">
             
                <!-- iso section -->
-               <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
+               <!-- <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
                     <ul class="filter-wrapper clearfix">
                         <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
@@ -131,7 +132,7 @@ http://www.tooplate.com/view/2082-pure-mix
                         <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li>
                     </ul>
 
-               </div>
+               </div> -->
 
          </div>
 
