--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -62,7 +62,7 @@ http://www.tooplate.com/view/2082-pure-mix
             <div class="row">
 
               <div class="brand">
-                <a href="index.html">Nigel van Maanen</a>
+                <a href="../index.html">Nigel van Maanen</a>
               </div>
 
               <!-- <div class="navicon">
