--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -155,24 +155,24 @@ http://www.tooplate.com/view/2082-pure-mix
 
 <!-- Footer section
 ================================================== -->
-<footer>
+<!-- <footer>
 	<div class="container">
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
 				<p class="wow fadeInUp"  data-wow-delay="0.3s">Copyright © 2016 Your Company Name - Designed by Tooplate</p>
-				<!-- <ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
+				<ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
 					<li><a href="#" class="fa fa-dribbble"></a></li>
 					<li><a href="#" class="fa fa-behance"></a></li>
 					<li><a href="#" class="fa fa-google-plus"></a></li>
-				</ul> -->
+				</ul>
 			</div>
 			
 		</div>
 	</div>
-</footer>
+</footer> -->
 
 
 <!-- Javascript 
