--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -148,8 +148,11 @@ http://www.tooplate.com/view/2082-pure-mix
 <div class="wrapper">
    
    <div class="text-box">
-      <h2>irgdujhuijtrhguijrtfdfh</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus, reprehenderit quidem, similique porro alias cum eos aliquam consequuntur iste sequi vero nulla earum necessitatibus velit minus minima id impedit inventore praesentium nam neque esse quasi fugit. Dolorum perferendis vel, cumque eum sunt cupiditate doloribus vero eos? Corrupti, dolor nostrum!</p>
+      <h2>About Starfruit</h2>
+      <p>Starfruit is a potion brewing and dating simulation game. The player takes orders from the clients and puts these orders together using the different stations. if you make the order correctly, you'll see the client gains a heart. when you get to 3 hearts with one client, you can go on a date with that client. you can also lose hearts when you make the order incorrectly.<br></p>
+      <h2>About Project</h2>
+      <p>This was a 6 week long school project. The goal of this project was to make a complete game and then release it on Itch.io. The development time for the game itself was 4 weeks (12 days) plus 2 weeks (6 days) time for polishment. our team consisted of 4 artists and 1 developer (wich is me)</p>
+      <p>Play the game for yourself at <a href="https://starfruitthegame.itch.io/starfruit">Itch.io</a></p>
    </div>
    <div>
       <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
