--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/LearningGodot.html">
           <div class="grid-item Godot Own-Projects wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/Godot.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Learning Godot</h5>
                 <p>Godot, Own Projects</p>
