--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <a href="Projects/StarFruit.html">
           <div class="grid-item 2D Unity School wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/RatRace.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">RatRace</h5>
                 <p>2D, Unity, School</p>
