--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/TwinStick.html">
           <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/Twinstick.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Twinstick</h5>
                 <p>3D, Unity, School</p>
@@ -404,7 +404,7 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/ChristmasArena.html">
           <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
@@ -426,7 +426,7 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/TowerDefence3D.html">
           <div class="grid-item 3D Unity Own-Projects wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
