--- a/Projects/TwinStick.html
+++ b/Projects/TwinStick.html
@@ -33,7 +33,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/StartfruitStyle.css">
+	<link rel="stylesheet" href="css/TwinStickStyle.css">
 
 	<!-- Google web font 
    ================================================== -->	
@@ -77,8 +77,8 @@ http://www.tooplate.com/view/2082-pure-mix
 
 			<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
           <div class="header-thumb">
-              <h1 class="wow fadeIn" data-wow-delay="0.7s">StarFruit</h1>
-              <h3 class="wow fadeInUp" data-wow-delay="1s">A potion brewing and dating sim!</h3>
+              <h1 class="wow fadeIn" data-wow-delay="0.7s">TwinStick</h1>
+              <h3 class="wow fadeInUp" data-wow-delay="1s">A TwinStick game..</h3>
           </div>
 			</div>
 
@@ -90,11 +90,10 @@ http://www.tooplate.com/view/2082-pure-mix
 ================================================== -->
 <div class="wrapper">
    <div class="text-box">
-      <h2>About Starfruit</h2>
-      <p>Starfruit is a potion brewing and dating simulation game. The player takes orders from the clients and puts these orders together using the different stations. if you make the order correctly, you'll see the client gains a heart. when you get to 3 hearts with one client, you can go on a date with that client. you can also lose hearts when you make the order incorrectly.<br></p>
+      <h2>About TwinStick</h2>
+      <p>TwinStick is a game where you play as a wizard. It was a small school project from my first year so there isn't really a goal. You can kill all the enemies and find all the unique wands that are spread over the map. All wands have their own attacks wich all cost mana (which you automaticly regain after not using mana for a while).<br></p>
       <h2>About Project</h2>
-      <p>This was a 6 week long school project. The goal of this project was to make a complete game and then release it on Itch.io. The development time for the game itself was 4 weeks (12 days) plus 2 weeks (6 days) time for polishment. our team consisted of 4 artists and 1 developer (wich is me)</p>
-      <p>Play the game for yourself at <a href="https://starfruitthegame.itch.io/starfruit" target="_blank">Itch.io</a></p>
+      <p>This was the first "big" school project at the end of my first year. The project was to make a TwinStick game and apparently we didn't bother to give it a name back then.. The project was about 8 weeks long for what I remember and our team consisted of 4 people (2 devs and 2 artists). As one of the devs I was monstly reponsible for the skill point system, wands and the lot of cheatcodes..</p>
    </div>
    <div>
       <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
