--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         <a href="Projects/ChristmasArena.html">
           <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/ChristmasArena.PNG" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Christmas Arena</h5>
                 <p>3D, Unity, School</p>
