--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <a href="Projects/TwinStick.html">
           <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/Twinstick.png" alt="">
+              <img src="../assets/img/work/Twinstick.PNG" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Twinstick</h5>
                 <p>3D, Unity, School</p>
