--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@
           <span>Years of experience</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
+          <h1 class="number" data-number="10000">10000</h1>
+          <span>Lines of code</span>
+        </div>
+        <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="5">5</h1>
           <span>Hours of sleep</span>
         </div>
