--- a/Projects/RTS.html
+++ b/Projects/RTS.html
@@ -96,7 +96,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>This project is made by a bigger group of students (17 students) from the Media Collage Amsterdam and Grafisch Lyceum Utrecht. In this project students would learn more about how to work in a smaller team (yet bigger than the normal teams at school) using scrum. We also used Unreal Engine instead of Unity, which we normally use in school. I was one of the developers on this project and was mainly responsible for the barracks. The project was about 10 weeks long</p>
    </div>
    <div>
-      <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
+      <img id="gameImage" src="images/RTSMap.png">
    </div>
 </div>
 
