--- a/Projects/RandomMaze.html
+++ b/Projects/RandomMaze.html
@@ -108,7 +108,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
    </div>
    <div>
-      <img src>
+      <img src="images/Code/MazeGen.PNG">
    </div>
 </div>
 
