--- a/index.html
+++ b/index.html
@@ -140,31 +140,25 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">C#</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Very good</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Scrum</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Very good</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">GitHub</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">good/div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Web Development</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Game Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
               </div>
             </div>
           </div>
@@ -175,19 +169,19 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Unity</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Very good</div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Unreal Engine</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+                <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">40%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Godot</span>
+              <span class="caption">Godot (Learning)</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Learning</div>
+                <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">30%</div>
               </div>
             </div>
           </div>
